Fix thumbnail grid spacing

--- a/online-media.css
+++ b/online-media.css
@@ -44,7 +44,8 @@ a {
   /* border: 2px solid yellow; */
   font-family: 'Courier New', Courier, monospace;
   font-weight: 600;
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
+  height: 280px;
 }
 
 #thumbnail-card:hover p {
@@ -53,7 +54,6 @@ a {
 
 .thumbnail-image{
   height: 232px;
-  max-height: 235px;
   padding-bottom: 10px;
 }
 
